# sugarcrm-python

./: README.md  pyproject.toml  setup.py
sugarcrm/: client.py  decorator.py  enumerator.py  exception.py
tests/: test_client.py
